img overflow corrected

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     background-size: cover;
     position: relative;
     /* opacity: 0.9; */
+    overflow: hidden;
 }
 
 nav {
